Jan 25, 2006

 * PVW: Bugfixes for optional use of CHR constraints in rule guards.

Jan 18, 2006

  * PVW: Optional use of CHR constraints in rule guards.

Nov 20, 2006

  * TS: Bug fix in compiler_errors.pl.

Oct 25, 2006

  * TS: Bug fix in occurrence subsumption by Jon Sneyers.

Oct 18, 2006

  * TS: New preprocessor feature.

  * TS: Parametrization of experimental chr_identifier type.

Oct 16, 2006

  * TS: More inlining.

  * TS: Stronger static type checking.

  * TS: Omitted buggy FD analysis from bootstrapping process.

Oct 12, 2006

  * TS: More inlining.

  * TS: Experimental chr_identifier type.

Oct 10, 2006

  * TS: Allow for empty type definitions aka phantom types. These are 
	useful for some type-level tricks. A warning is issued so the 
	user can check whether a phantom type is intended. No other
	phantom type-specific checks are in place yet.

  * TS: Fixed static type checking of built-in types.

Oct 9, 2006

  * TS: The dense_int type can now appear on the rhs of type alias
	definitions.

Oct 3, 2006

  * TS: Fixed bug concerning matchings between ground and possibly
 	non-ground arguments.	

Oct 2, 2006

  * TS: Fixed a bug in code generation, overeager removal of a clause.

Sep 28, 2006

  * TS: Refactored some code.

Sep 22, 2006

  * TS: Add exception handler to initialize chr_leash in new threads.
  
Sep 18. 2006

  * TS: Bug fix for programs in debugging mode.

Aug 30, 2006

  * JW: Fixed make clean
  * JW: Enlarged stacks to make build succeed

Aug 24, 2006

  * JW: Add target ln-install

Aug 21, 2006

  * TS: Fixed wrong arities in not inlined predicates. Mike Elston.

Aug 18, 2006

  * TS: Code clean-up, more inlining, only generate used imports.

Aug 17, 2006

  * TS: Inlining and more specialization of auxiliary predicates.

Aug 10, 2006

  * TS: Fixed bug for constraints without rules in debug mode.

  * TS: Compiler clean-up

  * TS: Experimental var_assoc_store.


Aug 9, 2006
